build: add JaCoCo test coverage and reporting to build.gradle
Closes #7